force-app/main/default/objects/Customer_Readiness__c/Customer_Readiness__c.object-meta.xml
<CustomObject>
    <description>Custom Object to hold Customer Readiness / Risk Assessment questions to calculate an overall Risk score.</description>
    <label>Customer Readiness</label>
    <nameField>
        <label>Customer Readiness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Readiness</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>