force-app/main/default/objects/Customer_Readiness__c/fields/Are_3rd_parties_involved__c.field-meta.xml
<CustomField>
    <fullName>Are_3rd_parties_involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are 3rd parties involved?</label>
    <type>Checkbox</type>
</CustomField>