force-app/main/default/objects/Customer_Readiness__c/fields/Are_3rd_parties_involved_Score__c.field-meta.xml
<CustomField>
    <fullName>Are_3rd_parties_involved_Score__c</fullName>
    <formula>If( Are_3rd_parties_involved__c = TRUE, 5, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are 3rd parties involved Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>