force-app/main/default/objects/Customer_Readiness__c/fields/Clear_Project_Sponsor_Buy_in_Score__c.field-meta.xml
<CustomField>
    <fullName>Clear_Project_Sponsor_Buy_in_Score__c</fullName>
    <formula>If(Clear_Project_Sponsor_Exec_Buy_in__c = TRUE,1,8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clear Project Sponsor Buy-in Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>