force-app/main/default/objects/Customer_Readiness__c/fields/Clear_Project_Sponsor_Exec_Buy_in__c.field-meta.xml
<CustomField>
    <fullName>Clear_Project_Sponsor_Exec_Buy_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Project Sponsor/Exec Buy-in?</label>
    <type>Checkbox</type>
</CustomField>