force-app/main/default/objects/Customer_Readiness__c/fields/Compact_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Compact_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compact Timeline?</label>
    <type>Checkbox</type>
</CustomField>