force-app/main/default/objects/Customer_Readiness__c/fields/Compact_Timeline_Score__c.field-meta.xml
<CustomField>
    <fullName>Compact_Timeline_Score__c</fullName>
    <formula>If( Compact_Timeline__c = TRUE, 6, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compact Timeline Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>