force-app/main/default/objects/Customer_Readiness__c/fields/Complexity_Total__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Total__c</fullName>
    <formula>How_many_Clouds_involved_Score__c +
How_many_Integrations_required_Score__c +
Is_it_a_green_field_project_Score__c +
Compact_Timeline_Score__c +
Do_they_want_phased_rollout_Score__c +
Are_3rd_parties_involved_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>