force-app/main/default/objects/Customer_Readiness__c/fields/Complexity_Total_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Total_Baseline__c</fullName>
    <formula>35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity Total Baseline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>