force-app/main/default/objects/Customer_Readiness__c/fields/Complexity_Total_Plot__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Total_Plot__c</fullName>
    <formula>(Complexity_Total__c / Complexity_Total_Baseline__c) * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity Total Plot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>