force-app/main/default/objects/Customer_Readiness__c/fields/Detailed_requirements_written_down__c.field-meta.xml
<CustomField>
    <fullName>Detailed_requirements_written_down__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detailed requirements written down?</label>
    <type>Checkbox</type>
</CustomField>