force-app/main/default/objects/Customer_Readiness__c/fields/Detailed_requirements_written_down_Score__c.field-meta.xml
<CustomField>
    <fullName>Detailed_requirements_written_down_Score__c</fullName>
    <formula>If( Detailed_requirements_written_down__c = TRUE, 1, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detailed requirements written down Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>