force-app/main/default/objects/Customer_Readiness__c/fields/Do_they_want_phased_rollout__c.field-meta.xml
<CustomField>
    <fullName>Do_they_want_phased_rollout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they want phased rollout?</label>
    <type>Checkbox</type>
</CustomField>