force-app/main/default/objects/Customer_Readiness__c/fields/Do_they_want_phased_rollout_Score__c.field-meta.xml
<CustomField>
    <fullName>Do_they_want_phased_rollout_Score__c</fullName>
    <formula>If( Do_they_want_phased_rollout__c = TRUE, 1, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do they want phased rollout Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>