force-app/main/default/objects/Customer_Readiness__c/fields/Expectations_beyond_budget__c.field-meta.xml
<CustomField>
    <fullName>Expectations_beyond_budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expectations beyond budget?</label>
    <type>Checkbox</type>
</CustomField>