force-app/main/default/objects/Customer_Readiness__c/fields/Expectations_beyond_budget_Score__c.field-meta.xml
<CustomField>
    <fullName>Expectations_beyond_budget_Score__c</fullName>
    <formula>If( Expectations_beyond_budget__c = TRUE, 8, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expectations beyond budget Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>