force-app/main/default/objects/Customer_Readiness__c/fields/Goals_of_Project_clearly_defined__c.field-meta.xml
<CustomField>
    <fullName>Goals_of_Project_clearly_defined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goals of Project clearly defined?</label>
    <type>Checkbox</type>
</CustomField>