force-app/main/default/objects/Customer_Readiness__c/fields/Goals_of_Project_clearly_defined_Score__c.field-meta.xml
<CustomField>
    <fullName>Goals_of_Project_clearly_defined_Score__c</fullName>
    <formula>If( Goals_of_Project_clearly_defined__c = TRUE, 1, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goals of Project clearly defined Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>