force-app/main/default/objects/Customer_Readiness__c/fields/Have_they_completed_IT_projects__c.field-meta.xml
<CustomField>
    <fullName>Have_they_completed_IT_projects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have they completed IT projects?</label>
    <type>Checkbox</type>
</CustomField>