force-app/main/default/objects/Customer_Readiness__c/fields/Have_they_completed_IT_projects_Score__c.field-meta.xml
<CustomField>
    <fullName>Have_they_completed_IT_projects_Score__c</fullName>
    <formula>If( Have_they_completed_IT_projects__c = TRUE, 1, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Have they completed IT projects Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>