force-app/main/default/objects/Customer_Readiness__c/fields/How_many_Clouds_involved__c.field-meta.xml
<CustomField>
    <fullName>How_many_Clouds_involved__c</fullName>
    <label>How many Clouds involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>