force-app/main/default/objects/Customer_Readiness__c/fields/How_many_Clouds_involved_Score__c.field-meta.xml
<CustomField>
    <fullName>How_many_Clouds_involved_Score__c</fullName>
    <formula>CASE( How_many_Clouds_involved__c ,
&quot;1&quot;,1,
&quot;2&quot;,3,
&quot;3&quot;,7,
&quot;4+&quot;,10,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How many Clouds involved Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>