force-app/main/default/objects/Customer_Readiness__c/fields/How_many_Integrations_required__c.field-meta.xml
<CustomField>
    <fullName>How_many_Integrations_required__c</fullName>
    <label>How many Integrations required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>