force-app/main/default/objects/Customer_Readiness__c/fields/How_many_Integrations_required_Score__c.field-meta.xml
<CustomField>
    <fullName>How_many_Integrations_required_Score__c</fullName>
    <formula>Case( How_many_Integrations_required__c ,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5+&quot;,5,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How many Integrations required Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>