force-app/main/default/objects/Customer_Readiness__c/fields/Internal_resource_to_own_deliverable__c.field-meta.xml
<CustomField>
    <fullName>Internal_resource_to_own_deliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal resource to own deliverable?</label>
    <type>Checkbox</type>
</CustomField>