force-app/main/default/objects/Customer_Readiness__c/fields/Internal_resource_to_own_delivery_Score__c.field-meta.xml
<CustomField>
    <fullName>Internal_resource_to_own_delivery_Score__c</fullName>
    <formula>If(Internal_resource_to_own_deliverable__c = TRUE, 1, 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal resource to own delivery Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>