force-app/main/default/objects/Customer_Readiness__c/fields/Is_it_a_green_field_project__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_green_field_project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it a green field project?</label>
    <type>Checkbox</type>
</CustomField>