force-app/main/default/objects/Customer_Readiness__c/fields/Is_it_a_green_field_project_Score__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_green_field_project_Score__c</fullName>
    <formula>If( Is_it_a_green_field_project__c = TRUE, 1,7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is it a green field project Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>