force-app/main/default/objects/Customer_Readiness__c/fields/Is_there_a_client_PM__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_client_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there a client PM?</label>
    <type>Checkbox</type>
</CustomField>