force-app/main/default/objects/Customer_Readiness__c/fields/Is_there_a_client_PM_Score__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_client_PM_Score__c</fullName>
    <formula>If( Is_there_a_client_PM__c = TRUE, 1,8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is there a client PM Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>