force-app/main/default/objects/Customer_Readiness__c/fields/Knowledgeable_client_product_owner_BA__c.field-meta.xml
<CustomField>
    <fullName>Knowledgeable_client_product_owner_BA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledgeable client product owner/BA?</label>
    <type>Checkbox</type>
</CustomField>