force-app/main/default/objects/Customer_Readiness__c/fields/Knowledgeable_client_product_owner_Score__c.field-meta.xml
<CustomField>
    <fullName>Knowledgeable_client_product_owner_Score__c</fullName>
    <formula>If(Knowledgeable_client_product_owner_BA__c = TRUE, 1, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Knowledgeable client product owner Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>