force-app/main/default/objects/Customer_Readiness__c/fields/Risk_Total__c.field-meta.xml
<CustomField>
    <fullName>Risk_Total__c</fullName>
    <formula>Clear_Project_Sponsor_Buy_in_Score__c + Goals_of_Project_clearly_defined_Score__c +
Sales_Lifecycle_being_rushed_Score__c +
Is_there_a_client_PM_Score__c +
Knowledgeable_client_product_owner_Score__c +
Internal_resource_to_own_delivery_Score__c +
Have_they_completed_IT_projects_Score__c +
Detailed_requirements_written_down_Score__c +
Expectations_beyond_budget_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>