force-app/main/default/objects/Customer_Readiness__c/fields/Risk_Total_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Risk_Total_Baseline__c</fullName>
    <formula>46</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Total Baseline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>