force-app/main/default/objects/Customer_Readiness__c/fields/Risk_Total_Plot__c.field-meta.xml
<CustomField>
    <fullName>Risk_Total_Plot__c</fullName>
    <formula>(Risk_Total__c / Risk_Total_Baseline__c) * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Total Plot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>