force-app/main/default/objects/Customer_Readiness__c/fields/Sales_Lifecycle_being_rushed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lifecycle_being_rushed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Lifecycle being rushed?</label>
    <type>Checkbox</type>
</CustomField>