force-app/main/default/objects/Customer_Readiness__c/fields/Sales_Lifecycle_being_rushed_Score__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lifecycle_being_rushed_Score__c</fullName>
    <formula>If( Sales_Lifecycle_being_rushed__c = TRUE, 5,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Lifecycle being rushed Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>