force-app/main/default/objects/Customer_Readiness__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Project__c</columns>
    <columns>Risk_Total_Plot__c</columns>
    <columns>Complexity_Total_Plot__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>